--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -7,7 +7,7 @@
 {
     background-color: yellow;
 }
-.one .two
+.one, .two
 {
     font-size: 28px;
     font-family: Helvetica, "Times New Roman", sans-serif;
